[package]
name = "vfd-clock-esp32"
version = "0.1.0"
authors = ["Travis Geis <travis@travisgeis.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.16.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.14.0", features = ["esp32"] }
esp-bootloader-esp-idf = "0.1.0"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"
u8g2-fonts = "0.7.0"
embedded-hal = "1.0.0"
