[package]
name = "qemu-error-repro"
version = "0.1.0"
authors = ["Travis Geis <travis@travisgeis.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.16.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.14.0", features = ["esp32"] }

